kubernetes/webui-deployment.yaml
# /kubernetes/webui-deployment.yaml
# Deploys the stateless Open WebUI frontend.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      containers:
        - name: open-webui
          image: open-webui/open-webui:main
          ports:
            - containerPort: 8080
